--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="loginModel"
-            type="com.mvvm.design.pattern.model.LoginViewModel" />
+            type="com.mvvm.design.pattern.model.viewmodel.LoginViewModel" />
 
         <variable
             name="resource"
@@ -41,12 +41,13 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
-            <android.support.design.widget.TextInputEditText
+            <com.mvvm.design.pattern.ui.customview.ClearAbleEditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
+                android:drawableRight="@drawable/ic_clear"
                 android:maxLength="100"
                 android:onTextChanged="@{(newText,start,before,count)->loginModel.getLoginModel().onEmailChanged(newText)}" />
         </android.support.design.widget.TextInputLayout>
@@ -61,12 +62,13 @@
             app:layout_constraintStart_toStartOf="@+id/email_parent_layout"
             app:layout_constraintTop_toTopOf="@+id/guideline">
 
-            <android.support.design.widget.TextInputEditText
+            <com.mvvm.design.pattern.ui.customview.ClearAbleEditText
                 android:id="@+id/et_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
+                android:drawableRight="@drawable/ic_clear"
                 android:maxLength="20"
                 android:onTextChanged="@{(newText,start,before,count)->loginModel.getLoginModel().onPasswordChanged(newText)}" />
         </android.support.design.widget.TextInputLayout>
